--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="hero-content">
       <h1>Welcome to SurveyWorld</h1>
       <p>Earn rewards by completing online surveys. Start today and get exclusive bonuses!</p>
-      <a href="surveys.html" class="btn btn-primary">Go to Surveys</a>
+      <button class="btn btn-primary" onclick="location.href='surveys.html'">Go to Surveys</button>
     </div>
   </header>
 
