--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SurveyWorld</title>
+
+  <!-- SEO Base -->
+  <meta name="description" content="SurveyWorld - Earn rewards by completing online surveys. Join trusted survey sites and get bonus points!">
+  <meta name="keywords" content="online surveys, earn rewards, survey sites, get bonus, points, paid surveys">
+  <meta name="author" content="Cristian Federici">
+
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,6 +17,7 @@
     <div class="hero-content">
       <h1>Welcome to SurveyWorld</h1>
       <p>Earn rewards by completing online surveys. Start today and get exclusive bonuses!</p>
+      <!-- Pulsante reale -->
       <button class="btn btn-primary" onclick="location.href='surveys.html'">Go to Surveys</button>
     </div>
   </header>
