--- a/surveys.html
+++ b/surveys.html
@@ -20,42 +20,42 @@
   <section class="survey-sites">
 
     <div class="site">
-      <img src="logo_heycash.png" alt="HeyCash">
+      <img src="logo_heycash.png" alt="HeyCash - Earn rewards with online surveys">
       <h3>HeyCash</h3>
       <p>Earn points quickly by completing surveys and redeem them for cash or gift cards. <strong>Register here to get bonus!</strong></p>
       <a href="https://heycash.com/register?ref=9f8fc9ba-2530-4e20-b70d-eeb5159b300e" target="_blank" class="btn btn-primary">Go to Survey</a>
     </div>
 
     <div class="site">
-      <img src="logo_primeopinion.png" alt="PrimeOpinion">
+      <img src="logo_primeopinion.png" alt="PrimeOpinion - Answer surveys for rewards">
       <h3>PrimeOpinion</h3>
       <p>Answer surveys and accumulate points that you can exchange for prizes. <strong>Register here to get bonus!</strong></p>
       <a href="https://primeopinion.com/register?ref=9f672994-91db-4007-a41a-56959cd35b49" target="_blank" class="btn btn-primary">Go to Survey</a>
     </div>
 
     <div class="site">
-      <img src="logo_fivesurveys.png" alt="Five Surveys">
+      <img src="logo_fivesurveys.png" alt="Five Surveys - Complete surveys and earn points">
       <h3>Five Surveys</h3>
       <p>Complete a variety of surveys and earn points redeemable for PayPal or gift cards. <strong>Register here to get bonus!</strong></p>
       <a href="https://fivesurveys.com/register?ref=9f8fcbfc-6e8f-4a86-aa3f-8d03c79a6cc0" target="_blank" class="btn btn-primary">Go to Survey</a>
     </div>
 
     <div class="site">
-      <img src="logo_surveyeah.png" alt="Surveyeah">
+      <img src="logo_surveyeah.png" alt="Surveyeah - Quick surveys for points and rewards">
       <h3>Surveyeah</h3>
       <p>Quick surveys that let you earn points to redeem for Amazon, PayPal or other gift cards. <strong>Register here to get bonus!</strong></p>
       <a href="https://panel.surveyeah.com/it/p/5852901?s=share-link" target="_blank" class="btn btn-primary">Go to Survey</a>
     </div>
 
     <div class="site">
-      <img src="logo_swagbucks.png" alt="Swagbucks">
+      <img src="logo_swagbucks.png" alt="Swagbucks - Earn points through surveys, videos, and shopping">
       <h3>Swagbucks</h3>
       <p>Complete surveys, watch videos, or shop online to earn points redeemable for cash or gift cards. <strong>Register here to get bonus!</strong></p>
       <a href="https://www.swagbucks.com/p/register?rb=217090315&rp=1" target="_blank" class="btn btn-primary">Go to Survey</a>
     </div>
 
     <div class="site">
-      <img src="logo_myiyo.png" alt="Myiyo">
+      <img src="logo_myiyo.png" alt="Myiyo - Participate in surveys and product tests for rewards">
       <h3>Myiyo</h3>
       <p>Participate in surveys and product tests to collect points redeemable for rewards. <strong>Register here to get bonus!</strong></p>
       <a href="https://www.myiyo.com/?ref=267527131" target="_blank" class="btn btn-primary">Go to Survey</a>
