--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
   <meta name="keywords" content="online surveys, earn rewards, survey sites, get bonus, points, paid surveys">
   <meta name="author" content="Cristian Federici">
 
-  <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PFDDXWE36R"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-PFDDXWE36R');
-  </script>
-  <!-- /Google Analytics -->
+  <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PFDDXWE36R"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-PFDDXWE36R');
+    </script>
 
   <link rel="stylesheet" href="style.css">
 </head>
