--- a/surveys.html
+++ b/surveys.html
@@ -52,10 +52,11 @@
     </div>
 
     <div class="site">
-      <img src="logo_surveyeah.png" alt="Surveyeah - Quick surveys for points and rewards">
-      <h3>Surveyeah</h3>
-      <p>Quick surveys that let you earn points to redeem for Amazon, PayPal or other gift cards. <strong>Register here to get bonus!</strong></p>
-      <a href="https://panel.surveyeah.com/it/p/5852901?s=share-link" target="_blank" class="btn btn-primary">Go to Survey</a>
+        <img src="logo_pawns.png" alt="Pawns.app - Earn money by sharing internet and surveys">
+        <h3>Pawns.app</h3>
+        <p>Earn money by sharing your internet connection and completing surveys. 
+        <strong>Register here to get bonus!</strong></p>
+        <a href="https://pawns.app/?r=15495555" target="_blank" class="btn btn-primary">Go to Survey</a>
     </div>
 
     <div class="site">
