--- a/surveys.html
+++ b/surveys.html
@@ -4,17 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Surveys - SurveyWorld</title>
-
-  <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PFDDXWE36R"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'G-PFDDXWE36R');
-    </script>
-
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -30,46 +19,61 @@
 
   <section class="survey-sites">
 
-    <div class="site">
+    <!-- HeyCash -->
+    <div class="site recommended">
+      <span class="badge">⭐ Recommended</span>
       <img src="logo_heycash.png" alt="HeyCash - Earn rewards with online surveys">
       <h3>HeyCash</h3>
-      <p>Earn points quickly by completing surveys and redeem them for cash or gift cards. <strong>Register here to get bonus!</strong></p>
+      <p>Earn points quickly by completing surveys and redeem them for cash or gift cards. 
+         <strong>Register here and get a €1 bonus!</strong></p>
       <a href="https://heycash.com/register?ref=9f8fc9ba-2530-4e20-b70d-eeb5159b300e" target="_blank" class="btn btn-primary">Go to Survey</a>
     </div>
 
-    <div class="site">
+    <!-- PrimeOpinion -->
+    <div class="site recommended">
+      <span class="badge">⭐ Recommended</span>
       <img src="logo_primeopinion.png" alt="PrimeOpinion - Answer surveys for rewards">
       <h3>PrimeOpinion</h3>
-      <p>Answer surveys and accumulate points that you can exchange for prizes. <strong>Register here to get bonus!</strong></p>
+      <p>Answer surveys and accumulate points that you can exchange for prizes. 
+         <strong>Register here and get a €1 bonus!</strong></p>
       <a href="https://primeopinion.com/register?ref=9f672994-91db-4007-a41a-56959cd35b49" target="_blank" class="btn btn-primary">Go to Survey</a>
     </div>
 
-    <div class="site">
+    <!-- FiveSurveys -->
+    <div class="site recommended">
+      <span class="badge">⭐ Recommended</span>
       <img src="logo_fivesurveys.png" alt="Five Surveys - Complete surveys and earn points">
       <h3>Five Surveys</h3>
-      <p>Complete a variety of surveys and earn points redeemable for PayPal or gift cards. <strong>Register here to get bonus!</strong></p>
+      <p>Complete a variety of surveys and earn points redeemable for PayPal or gift cards. 
+         <strong>Register here to get bonus!</strong></p>
       <a href="https://fivesurveys.com/register?ref=9f8fcbfc-6e8f-4a86-aa3f-8d03c79a6cc0" target="_blank" class="btn btn-primary">Go to Survey</a>
     </div>
 
-    <div class="site">
-        <img src="logo_pawns.png" alt="Pawns.app - Earn money by sharing internet and surveys">
-        <h3>Pawns.app</h3>
-        <p>Earn money by sharing your internet connection and completing surveys. 
-        <strong>Register here to get bonus!</strong></p>
-        <a href="https://pawns.app/?r=15495555" target="_blank" class="btn btn-primary">Go to Survey</a>
+    <!-- Pawns.app -->
+    <div class="site recommended">
+      <span class="badge">⭐ Recommended</span>
+      <img src="logo_pawns.png" alt="Pawns.app - Earn money by sharing internet and surveys">
+      <h3>Pawns.app</h3>
+      <p>Earn money by sharing your internet connection and completing surveys. 
+         <strong>Register here and get a €3 bonus!</strong></p>
+      <a href="https://pawns.app/register?r=TUO-REFERRAL" target="_blank" class="btn btn-primary">Go to Survey</a>
     </div>
 
+    <!-- Swagbucks -->
     <div class="site">
       <img src="logo_swagbucks.png" alt="Swagbucks - Earn points through surveys, videos, and shopping">
       <h3>Swagbucks</h3>
-      <p>Complete surveys, watch videos, or shop online to earn points redeemable for cash or gift cards. <strong>Register here to get bonus!</strong></p>
+      <p>Complete surveys, watch videos, or shop online to earn points redeemable for cash or gift cards. 
+         <strong>Register here to get bonus!</strong></p>
       <a href="https://www.swagbucks.com/p/register?rb=217090315&rp=1" target="_blank" class="btn btn-primary">Go to Survey</a>
     </div>
 
+    <!-- Myiyo -->
     <div class="site">
       <img src="logo_myiyo.png" alt="Myiyo - Participate in surveys and product tests for rewards">
       <h3>Myiyo</h3>
-      <p>Participate in surveys and product tests to collect points redeemable for rewards. <strong>Register here to get bonus!</strong></p>
+      <p>Participate in surveys and product tests to collect points redeemable for rewards. 
+         <strong>Register here to get bonus!</strong></p>
       <a href="https://www.myiyo.com/?ref=267527131" target="_blank" class="btn btn-primary">Go to Survey</a>
     </div>
 
