--- a/surveys.html
+++ b/surveys.html
@@ -69,13 +69,13 @@
     </div>
 
     <!-- Myiyo -->
-    <div class="site">
-      <img src="logo_myiyo.png" alt="Myiyo - Participate in surveys and product tests for rewards">
-      <h3>Myiyo</h3>
-      <p>Participate in surveys and product tests to collect points redeemable for rewards. 
-         <strong>Register here to get bonus!</strong></p>
-      <a href="https://www.myiyo.com/?ref=267527131" target="_blank" class="btn btn-primary">Go to Survey</a>
-    </div>
+  <div class="site recommended">
+    <div class="recommended-badge">⭐ Recommended</div>
+    <img src="logo_topsurveys.png" alt="Top Surveys - Complete surveys for rewards">
+    <h3>Top Surveys</h3>
+    <p>Earn rewards by completing surveys and cash out easily. <strong>Register here and get a 1€ bonus!</strong></p>
+    <a href="https://topsurveys.app/register?ref=9fc80c8d-b151-4d94-bb5e-a932ab191af5" target="_blank" class="btn btn-primary">Go to Survey</a>
+  </div>
 
   </section>
 
