--- a/surveys.html
+++ b/surveys.html
@@ -68,12 +68,13 @@
       <a href="https://www.swagbucks.com/p/register?rb=217090315&rp=1" target="_blank" class="btn btn-primary">Go to Survey</a>
     </div>
 
-    <!-- Myiyo -->
+    <!-- TopSurveys -->
   <div class="site recommended">
-    <div class="recommended-badge">⭐ Recommended</div>
+    <span class="badge">⭐ Recommended</span>
     <img src="logo_topsurveys.png" alt="Top Surveys - Complete surveys for rewards">
     <h3>Top Surveys</h3>
-    <p>Earn rewards by completing surveys and cash out easily. <strong>Register here and get a 1€ bonus!</strong></p>
+    <p>Earn rewards by completing surveys and cash out easily. 
+      <strong>Register here and get a 1€ bonus!</strong></p>
     <a href="https://topsurveys.app/register?ref=9fc80c8d-b151-4d94-bb5e-a932ab191af5" target="_blank" class="btn btn-primary">Go to Survey</a>
   </div>
 
