--- a/surveys.html
+++ b/surveys.html
@@ -59,14 +59,16 @@
       <a href="https://pawns.app/register?r=TUO-REFERRAL" target="_blank" class="btn btn-primary">Go to Survey</a>
     </div>
 
-    <!-- Swagbucks -->
-    <div class="site">
-      <img src="logo_swagbucks.png" alt="Swagbucks - Earn points through surveys, videos, and shopping">
-      <h3>Swagbucks</h3>
+      <!-- Multipolls -->
+    <div class="site recommended">
+      <span class="badge">⭐ Recommended</span>
+      <img src="logo_multipolls.png" alt="Multipolls - Earn points through surveys, videos, and shopping">
+      <h3>Multipolls</h3>
       <p>Complete surveys, watch videos, or shop online to earn points redeemable for cash or gift cards. 
-         <strong>Register here to get bonus!</strong></p>
-      <a href="https://www.swagbucks.com/p/register?rb=217090315&rp=1" target="_blank" class="btn btn-primary">Go to Survey</a>
+         <strong>Register here and get a €1 bonus!</strong></p>
+      <a href="https://multipolls.com/it/join/BVF27398" target="_blank" class="btn btn-primary">Go to Survey</a>
     </div>
+
 
     <!-- TopSurveys -->
   <div class="site recommended">
