--- a/surveys.html
+++ b/surveys.html
@@ -19,6 +19,16 @@
 
   <section class="survey-sites">
 
+    <!-- Freecash -->
+    <div class="site recommended">
+      <span class="badge">⭐ Recommended</span>
+      <img src="logo_freecash.png" alt="Freecash - Earn money with surveys and offers">
+      <h3>Freecash</h3>
+      <p>One of the fastest-growing survey platforms where you can earn cash, crypto, and gift cards. 
+         <strong>Register here and get a bonus up to $5!</strong></p>
+      <a href="https://freecash.com/r/P85GD" target="_blank" class="btn btn-primary">Go to Survey</a>
+    </div>
+
     <!-- HeyCash -->
     <div class="site recommended">
       <span class="badge">⭐ Recommended</span>
@@ -59,9 +69,8 @@
       <a href="https://pawns.app/register?r=TUO-REFERRAL" target="_blank" class="btn btn-primary">Go to Survey</a>
     </div>
 
-      <!-- Multipolls -->
-    <div class="site recommended">
-      <span class="badge">⭐ Recommended</span>
+    <!-- Multipolls -->
+    <div class="site">
       <img src="logo_multipolls.png" alt="Multipolls - Earn points through surveys, videos, and shopping">
       <h3>Multipolls</h3>
       <p>Complete surveys, watch videos, or shop online to earn points redeemable for cash or gift cards. 
@@ -69,16 +78,23 @@
       <a href="https://multipolls.com/it/join/BVF27398" target="_blank" class="btn btn-primary">Go to Survey</a>
     </div>
 
-
     <!-- TopSurveys -->
-  <div class="site recommended">
-    <span class="badge">⭐ Recommended</span>
-    <img src="logo_topsurveys.png" alt="Top Surveys - Complete surveys for rewards">
-    <h3>Top Surveys</h3>
-    <p>Earn rewards by completing surveys and cash out easily. 
-      <strong>Register here and get a 1€ bonus!</strong></p>
-    <a href="https://topsurveys.app/register?ref=9fc80c8d-b151-4d94-bb5e-a932ab191af5" target="_blank" class="btn btn-primary">Go to Survey</a>
-  </div>
+    <div class="site">
+      <img src="logo_topsurveys.png" alt="Top Surveys - Complete surveys for rewards">
+      <h3>Top Surveys</h3>
+      <p>Earn rewards by completing surveys and cash out easily. 
+        <strong>Register here and get a 1€ bonus!</strong></p>
+      <a href="https://topsurveys.app/register?ref=9fc80c8d-b151-4d94-bb5e-a932ab191af5" target="_blank" class="btn btn-primary">Go to Survey</a>
+    </div>
+
+    <!-- Earn Stars -->
+    <div class="site">
+      <img src="logo_earnstars.png" alt="Earn Stars - Complete surveys and offers for rewards">
+      <h3>Earn Stars</h3>
+      <p>Join Earn Stars and start earning rewards by completing surveys and special offers. 
+         <strong>Register here and start collecting points today!</strong></p>
+      <a href="https://earnstar.com/register?ref=9fd07aaf-d874-4ee4-a0bf-5b3ff33466a8" target="_blank" class="btn btn-primary">Go to Survey</a>
+    </div>
 
   </section>
 
